Fix bug which causes hero button background colour to not display on Safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,9 @@ p {
     font-family: 'Open Sans', sans-serif;
     position: relative;
     background-color: #231f20;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     color: #fafafa;
     min-height: 50px;
     font-size: 20px;
